# packet-spot-buildkite-agent

./: .gitignore  buildkite.yml  deploy.sh  enter-env.sh  flake.nix  make-targets.sh  network.nix  pyproject.toml  shell.nix
modules/: buildkite.nix  default.nix  nix-collect-garbage.nix
morph-network/: default.nix  known_hosts
morph-network/machines/: buildkite-spot-0.system.nix
nix/: 0001-buildkite-fixup-https-github.com-NixOS-nixpkgs-pull-.patch  config.nix  default.nix  nixpkgs.json  pins.json
nix/poetry/: pyproject.toml
terraform/: apply.sh  enumerate-servers.sh  packet.tf  state.tf
